# Fractal

./: .gitignore  README.md  video.mkv
Calc-Fractal/: main.cpp
Calc-Fractal-Basic/: CMakeLists.txt  main.cpp  run.bash
